--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "sharp": "^0.32.6"
   },
   "devDependencies": {
     "@types/node": "^20",
